--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -10,7 +10,9 @@
 <body>
     <h1>Chocolate chip cookies</h1>
     <img
-        src="./images/4533707-215c8b63f7ba4fd697a210343739c5f8.webp">
+        src="./images/4533707-215c8b63f7ba4fd697a210343739c5f8.webp"
+        width="960"
+        height="640">
 
 
     <h2>Description</h2>
