Add link to index page

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -46,6 +46,8 @@
         <li>Drop cookies by rounded spoonfuls onto ungreased cookie sheets.</li>
         <li>Bake in batches in the preheated oven until the edges are golden brown, 10 to 12 minutes, switching racks halfway through.</li>
     </ol>
+
+    <a href="../index.html">Home</a>
 </body>
 
 </html>
