Add glizzy page link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/cookies.html">Chocolate chip cookies</a>
+        <ul>
+            <li><a href="recipes/cookies.html">Chocolate chip cookies</a></li>
+            <li><a href="recipes/glizzy.html">Glizzy</a></li>
+        </ul>
     </body>
 </html>
