--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -9,10 +9,8 @@
 
 <body>
     <h1>Chocolate chip cookies</h1>
-    <img
-        src="./images/4533707-215c8b63f7ba4fd697a210343739c5f8.webp"
-        width="960"
-        height="640">
+    <img src="./images/4533707-215c8b63f7ba4fd697a210343739c5f8.webp"
+        width="960" height="640">
 
 
     <h2>Description</h2>
@@ -22,7 +20,7 @@
         them for a cookie baking contest and won a red
         ribbon! You can use any flavor pudding you like for
         this recipe.</p>
-    
+
     <h2>Ingredients</h2>
     <ul>
         <li>4 ½ cups all-purpose flour</li>
@@ -30,7 +28,8 @@
         <li>2 cups butter, softened</li>
         <li>1 ½ cups packed brown sugar</li>
         <li>½ cup white sugar</li>
-        <li>2 (3.4 ounce) packages instant vanilla pudding mix</li>
+        <li>2 (3.4 ounce) packages instant vanilla pudding
+            mix</li>
         <li>4 eggs</li>
         <li>2 teaspoons vanilla extract</li>
         <li>4 cups semisweet chocolate chips</li>
@@ -39,12 +38,22 @@
 
     <h2>Steps</h2>
     <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
-        <li>Sift together flour and baking soda in a medium bowl, set aside.</li>
-        <li>Cream together butter, brown sugar, and white sugar in a large bowl. Beat in instant pudding mix until blended. Stir in eggs and vanilla.</li>
-        <li>Add flour mixture to the butter mixture until it's well incorporated. Fold in chocolate chips and nuts.</li>
-        <li>Drop cookies by rounded spoonfuls onto ungreased cookie sheets.</li>
-        <li>Bake in batches in the preheated oven until the edges are golden brown, 10 to 12 minutes, switching racks halfway through.</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees
+            C).</li>
+        <li>Sift together flour and baking soda in a medium
+            bowl, set aside.</li>
+        <li>Cream together butter, brown sugar, and white
+            sugar in a large bowl. Beat in instant pudding
+            mix until blended. Stir in eggs and vanilla.
+        </li>
+        <li>Add flour mixture to the butter mixture until
+            it's well incorporated. Fold in chocolate chips
+            and nuts.</li>
+        <li>Drop cookies by rounded spoonfuls onto ungreased
+            cookie sheets.</li>
+        <li>Bake in batches in the preheated oven until the
+            edges are golden brown, 10 to 12 minutes,
+            switching racks halfway through.</li>
     </ol>
 
     <a href="../index.html">Home</a>
