--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Index</title>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Index</title>
+</head>
 
 
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/cookies.html">Chocolate chip cookies</a></li>
-            <li><a href="recipes/glizzy.html">Glizzy</a></li>
-        </ul>
-    </body>
+<body>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/cookies.html">Chocolate chip
+                cookies</a></li>
+        <li><a href="recipes/glizzy.html">Glizzy</a></li>
+    </ul>
+</body>
+
 </html>
