Add mac link to index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li><a href="recipes/cookies.html">Chocolate chip
                 cookies</a></li>
         <li><a href="recipes/glizzy.html">Glizzy</a></li>
+        <li><a href="recipes/mac.html">Mac 'n Cheese</a>
+        </li>
     </ul>
 </body>
 
